# Lavadora

./: .gitignore  CMakeLists.txt  README.md  sensor_ultrasonico.py
MQTT/: Documentation.md  MQTT_Final.py  Pruebas.py  mainSonia.py
NivelAgua/: CMakeLists.txt  NivelAgua.c  NivelAgua.h  read.md
NivelAgua/NivelAgua/: NivelAgua.c  NivelAgua.h  NivelAgua_gen.c  NivelAgua_gen.h  read.md
PESO/: mainFinal.py  ssd1306.py
Temporizador/: CMakeLists.txt  ReadMe.md  hello_7segment.c  tempotizadorBoton.h
ciclo-de-lavado/: CMakeLists.txt  ciclo-lavado.S  ciclo-lavado.c  cicloLavado.c  cicloLavado.h  documentation.md  test.c
encendido-apagado/: CMakeLists.txt  documentation.md  encendidoApagado.c  encendidoApagado.h  test.c
main/: CMakeLists.txt  main.c
prog_lavadora/: CMakeLists.txt  NivelAgua.h  Readme.md  cicloLavado.h  encendidoApagado.h  hello_7segment.h  main.c  tipo_de_lavado.h  zumbador.c  zumbador.h
python/: MQTT_Final.py  README.md  main.py  shared_obj.py  temp.py
tipo_de_lavado/: CMakeLists.txt  documentacion.md  pruebas_tipo_lavado.c  tipo_de_lavado.c  tipo_de_lavado.h  tipo_lavado.h
uart/: CMakeLists.txt  README.md  uart.c  uart.h
zumbador/: documentation.md  zumbador.h
